practica9/k8s/20-tickets-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
  namespace: practica9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: us-central1-docker.pkg.dev/saproject201807411/delivereats/p8-users-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3101
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  namespace: practica9
spec:
  selector:
    app: users-service
  ports:
    - port: 3101
      targetPort: 3101
