practica9/k8s/23-audit-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audit-service
  namespace: practica9
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audit-service
  template:
    metadata:
      labels:
        app: audit-service
    spec:
      containers:
        - name: audit-service
          image: us-central1-docker.pkg.dev/saproject201807411/delivereats/p8-audit-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3104
---
apiVersion: v1
kind: Service
metadata:
  name: audit-service
  namespace: practica9
spec:
  selector:
    app: audit-service
  ports:
    - port: 3104
      targetPort: 3104
